[package]
name = "sinter_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
sinter_core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
gray_matter = { version = "0.3.2" }
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
