[package]
name = "sinter_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "DomTokenList",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "console",
    "InputEvent",
    "HtmlInputElement",
] }
js-sys = "0.3"
slotmap = "1.1.1"
wasm-bindgen-futures = "0.4.56"
