[package]
name = "sinter_theme_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
sinter_core = { path = "../core" }
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlLinkElement", "Window", "HtmlHeadElement", "Storage", "Response"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1" }
serde-wasm-bindgen = "0.6"
