[package]
name = "sinter_theme_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
sinter_core = { path = "../core" }
sinter_ui = { path = "../sinter_ui" }
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlLinkElement", "Window", "HtmlHeadElement", "Storage", "Response"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1" }
serde-wasm-bindgen = "0.6"
