[package]
name = "sinter_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sinter_ui = { path = "../sinter_ui" }
sinter_core = { path = "../core" }
wasm-bindgen = "0.2"
sinter_theme_sdk = { path = "../theme_sdk" }
sinter_themes = { path = "../themes" }
lite-alloc = "0.1.0"
web-sys = { version = "0.3", features = ["HtmlAnchorElement", "Url", "Location", "History", "Window", "Document", "Element", "Event", "EventTarget", "UrlSearchParams"] }

